--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -36,8 +36,8 @@
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/watpato"
-        android:label="@string/app_name"
+        android:icon="@drawable/pixelprice"
+        android:label="Pixelprice"
         android:supportsRtl="true"
         android:theme="@style/Theme.Watpato"
         android:usesCleartextTraffic="true"
@@ -58,7 +58,7 @@
     <activity
         android:name=".MainActivity"
         android:exported="true"
-        android:label="@string/app_name"
+        android:label="Pixelprice"
         android:theme="@style/Theme.Watpato"> <!-- Considera un tema NoActionBar si usas Compose puro -->
         <intent-filter>
             <action android:name="android.intent.action.MAIN" />
